--- a/app.json
+++ b/app.json
@@ -1,9 +1,7 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "MiamMiamR",
     "slug": "MiamMiamR",
-    "privacy": "public",
-    "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
       "android",
@@ -25,10 +23,6 @@
     ],
     "ios": {
       "supportsTablet": true
-    },
-    "android": {
-      "package": "com.thierry.MiamMiamR",
-      "versionCode": 1
     }
   }
 }
